kubernetes/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - port: 9696
    targetPort: 9696
    protocol: TCP
    name: http
  type: LoadBalancer
