kubernetes/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prowlarr.tehmatt.com`)
    kind: Rule
    middlewares:
    - name: default-headers
      namespace: prowlarr
    services:
    - name: prowlarr
      port: 9696
  tls: {}
